[project]
name = "enzian-lib"
version = "0.1.0"
description = "Python libraries for enzian projects"
authors = [ {name = "Gökhan", email = "ghb@enzianlabs.com"} ]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit>=1.0.8,<2.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
